'You think Darkness is your ally', fixed your spacing using the 'Force' and did the animation bit, message me when you see this im using style to be lazy

--- a/style.css
+++ b/style.css
@@ -19,7 +19,18 @@ body {
     border-color: lightgray;
 }
 .myshadow:hover {
-    box-shadow: .5rem .5rem .7rem rgba(0,0,0,.15);
+    animation-name: Dio;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
+
+@keyframes Dio {
+    50% {
+        box-shadow: .5rem .5rem .35rem rgba(0,0,0,.15);
+    }
+    100% {
+        box-shadow: .5rem .5rem .7rem rgba(0,0,0,.15);
+    }
 }
 
 .first-quote {
@@ -57,6 +68,12 @@ body {
     font-weight: 500;
     opacity: 0.8;
 }
+.border-curve {
+    border-radius: 12px;
+}
+.requirement-curve {
+    border-radius: 6px;
+}
 
 @media (max-width: 576px){
     .compartment {
@@ -69,10 +86,10 @@ body {
         font-size: 1.4em;
     }
     .requirement {
-        height: 13em;
+        height: 12em;
     }
     .requirement_tags {
-        width: 17em;
+        width: 15.5em;
     }
 }
 
@@ -122,6 +139,14 @@ body {
     .quote-right {
         font-size: 2em;
     }
+    .form-width {
+        width: 27em;
+        padding: 0 4em;
+    }
   }
-
+@media (min-width: 1200px) {
+    .divider {
+        width: 100%;
+    }
+}
 
